@@ -1,3 +1,8 @@
+2008-07-01  Jorge Gonzalez  <jorgegonz@artica.es>
+
+	* godmode/agentes/agent_manager.php: changed $lang_label () to function
+	lang_string (); modified tooltips and inline help.
+
 2008-07-01  Jorge Gonzalez  <jorge.gonzalez@artica.es>
 
 	* include/help/en/help_plugin_parameters.php,
